# monty-ifc-viewer

./: .gitignore  index.html  index.legacy.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy-site.yml  release.yml
scripts/: generate-icons.py
src/: App.tsx  env.d.ts  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/actions/: close-document.ts  load-file.ts  reset.ts  select-parameter.ts
src/components/: ContextMenu.tsx  DocumentBar.tsx  DropZone.tsx  Header.tsx  LanguageSelector.tsx  LoadingOverlay.tsx  ParameterSelect.tsx  PlayerControls.tsx  PlayerDisplay.tsx  ProgressBar.tsx  PropertyPanel.tsx  SelectionInfo.tsx  Sidebar.tsx  SpeedControl.tsx  StatusBar.tsx  ThemeSelector.tsx  ThreeCanvas.tsx  Toolbar.tsx  ValuesList.tsx  ViewerControls.tsx
src/hooks/: useFileDrop.ts  useKeyboardShortcuts.ts  usePlayer.ts  useThreeCanvas.ts
src/i18n/: translations.ts
src/services/: camera-controller.ts  geometry-service.ts  ifc-service.ts  material-service.ts  property-service.ts  raycaster-service.ts  three-service.ts
src/state/: document-store.ts  ifc-store.ts  locale-store.ts  player-store.ts  selection-store.ts  theme-store.ts  ui-store.ts  viewer-store.ts
src/styles/: global.css
src/styles/components/: ContextMenu.module.css  DocumentBar.module.css  DropZone.module.css  Header.module.css  LoadingOverlay.module.css  (+15 more)
src/types/: ifc.ts  viewer.ts
src/utils/: material-classifier.ts  value-sorter.ts
